# parkrun-scraper-sdk

./: .gitignore  hatch.toml  pyproject.toml
notebooks/: example.py  explore.ipynb  parkrun-scraper-sdk.code-workspace  setup.ipynb
src/parkrun_scraper_sdk/: __init__.py  base_dataclass.py  base_scraper.py  country.py  course.py  event.py  result.py  session_manager.py
src/parkrun_scraper_sdk/legacy/: parkrun_api.py
src/parkrun_scraper_sdk/orchestration/: extraction_orchestrator.py
